crates/oxc_react_compiler/tests/snapshots/error.invalid-reassign-const.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-reassign-const.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Syntax: Cannot reassign a `const` variable", labels: [LabeledSpan { label: None, span: Span { start: 40, end: 41 }, primary: false }], help: Some("`x` is declared as const"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
