crates/oxc_react_compiler/tests/snapshots/error.invalid-reassign-local-in-hook-return-value.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-reassign-local-in-hook-return-value.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: Cannot reassign variable after render completes", labels: [LabeledSpan { label: Some("Cannot reassign `x` after render completes"), span: SourceSpan { offset: 57, length: 1 }, primary: false }], help: Some("Reassigning `x` after render has completed can cause inconsistent behavior on subsequent renders. Consider using state instead"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: Cannot modify local variables after render completes", labels: [LabeledSpan { label: Some("This function may (indirectly) reassign or modify `x` after render"), span: SourceSpan { offset: 42, length: 29 }, primary: false }, LabeledSpan { label: Some("This modifies `x`"), span: SourceSpan { offset: 57, length: 1 }, primary: false }], help: Some("This argument is a function which may reassign or mutate `x` after render, which can cause inconsistent behavior on subsequent renders. Consider using state instead"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
