crates/oxc_react_compiler/tests/snapshots/error.invalid-reassign-variable-in-usememo.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-reassign-variable-in-usememo.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] UseMemo: useMemo() callbacks may not reassign variables declared outside of the callback", labels: [LabeledSpan { label: Some("Cannot reassign variable"), span: SourceSpan { offset: 75, length: 1 }, primary: false }], help: Some("useMemo() callbacks must be pure functions and cannot reassign variables defined outside of the callback function"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
